--- a/3.html
+++ b/3.html
@@ -16,6 +16,11 @@
     4.p는 문단!
     을 의미하는 것입니다.
     target 는 바로 새 탭을 이용할 때 사용하는 것. 
+    <br>
+    <strong> <동영상 연습!> </strong>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/On6Pm4M-dQQ?si=BX0biWpHJCTiHXLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
     </p>
     <a href="https://www.w3.org/TR/2011/WD-html5-20110405/"
     target ="_blank" title="html5" >LINK</a>
@@ -28,7 +33,7 @@
         <li> ol과 li의 차이</li>
     </ol>
     <h2>JAVASCRPIT</h2>
-    <img src="sky.jpg" width="100%">
+    
 </body>
 </html>
 
